# AIS2_v2

./: .gitignore  README.md  pyproject.toml  setup_data.py  test_system.py
models/: README.md
src/: __init__.py  main.py
src/mot_system/: __init__.py
src/mot_system/detection/: rt_detr_detector.py
src/mot_system/tracking/: simple_tracker.py
src/mot_system/utils/: video_processor.py
videos/: README.md
